# backlight

./: Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md
.cargo/: config
.github/workflows/: ci.yml
backlight/: Cargo.toml
backlight/src/: args.rs  main.rs  resolved_function.rs  syscall.rs
backlight_lib/: Cargo.toml
backlight_lib/examples/: heapcheck.rs
backlight_lib/examples/heapcheck/: heapoverflow.c
backlight_lib/src/: lib.rs
src/: args.rs  main.rs
test_support/: Cargo.toml  README.md  build.rs
test_support/output/: test_support_abs
test_support/src/: lib.c  lib.rs
